feat(server): separate assessment status from observation presence